# spec-tree

./: README.md  checkout-all-specs  checkout-new-specs  commit-from-anon-repo  delete-obsolete-specs  findspec  list-unclean  list-unclean-repo  match-spec-maintainer  pyproject.toml  setup.cfg  spec-rpm-mismatch  spec-url-check  update-all-specs
examples/: change-parsed-url  change-string  generate-mismatch-report  generate-url-report  mismatch-csv
spectree/: __init__.py  spec_rpm_mismatch.py  spec_url_check.py  spectree.py
tests/: context.py  test_spec_rpm_mismatch.py  test_spec_url_check.py  test_spectree.py
