[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-tree"
description = "Tools to manage a large set of RPM .spec files"
version = "2023.1.1dev"
readme = "README.md"
authors = [{name = "Dan Fandrich", email = "dan@coneharvesters.com"}]
license = {text = "GPLv2+"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-assertive",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-classmethod-staticmethod",
    "flake8-comprehensions",
    "flake8-datetimez",
    "flake8-deprecated",
    "flake8-docstrings",
    "flake8-get-chaining",
    "flake8-import-order",
    "flake8-mutable",
    "flake8-no-pep420",
    "flake8-noqa",
    "flake8-picky-parentheses",
    "flake8-pie",
    "flake8-pyproject",
    "flake8-quotes",
    "flake8-raise",
    "flake8-requirements",
    "flake8-return",
    "flake8-sfs",
    "flake8-simplify",
    "flake8-super",
    "flake8-warnings",
    "flake8-wot",
    "pytype"
]

[project.urls]
homepage = "https://github.com/dfandrich/spec-tree/"

[project.scripts]
spec-rpm-mismatch = "spectree.spec_rpm_mismatch:main"
spec-url-check = "spectree.spec_url_check:main"

[tool.setuptools]
packages = ["spectree"]
script-files = [
    "checkout-all-specs",
    "commit-from-anon-repo",
    "findspec",
    "list-unclean-repo",
    "match-spec-maintainer",
    "update-all-specs",
]
license-files = ["COPYING"]
include-package-data = false

# flake8-pyproject must be installed for flake8 to use these settings
[tool.flake8]
ignore = ["D107", "D204", "E501", "PAR101", "PAR103", "PLU002", "SFS301", "W503"]
docstring-convention = "google"
blanks-before-imports = 1

[tool.flake8.known-modules]
spec-tree = ["spectree"]
