[metadata]
name = spec-tree
summary = Tools to manage a large set of RPM .spec files
version = 2023.1
description = Includes tools to allow you to check out all the possible spec
   files in order to perform large-scale refactoring or changes, to search all
   the spec files, or to perform analysis on them.
long_description_file = README.md
author = Dan Fandrich
author_email = dan@coneharvesters.com
home_page = https://github.com/dfandrich/spec-tree/
license = GPLv2+
license_files = COPYING
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: System :: Archiving :: Packaging
    Topic :: Scientific/Engineering :: Information Analysis
    Typing :: Typed

[options]
python_requires = >=3.8
packages = spectree
scripts =
    checkout-all-specs
    commit-from-anon-repo
    findspec
    list-unclean-repo
    match-spec-maintainer
    update-all-specs
setup_requires =
    flake8

[options.entry_points]
console_scripts =
    spec-rpm-mismatch = spectree.spec_rpm_mismatch:main
    spec-url-check = spectree.spec_url_check:main

[flake8]
max-line-length = 132
